# spp3

./: .gitignore  DISSEMINATION.md  LICENSE  README.md  application.md  application_beta.md  maip_taxonomy.md
appendices/: appendix-a-pinata-verify.md  appendix-b-capability-tokens.md  appendix-c-verifier-flow.md  appendix-d-deliverables-operationalization.md  appendix-e-substrate-inheritance.md
chat-backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  sync_content.py
chat-backend/app/: agent.py  main.py  server.py  store.py
chat-backend/app/data/: dossier.md
chat-backend/app/tools/: dossier.py
chat-backend/evals/: README.md  answer_eval.py  retrieval_eval.py  specificity_eval.py
onboarding/: 00-spp3-brief.md  01-service-provider-program-context.md  02-brief-verifier-authresolverimpl.md  03-prototype-spec-verifier-authresolverimpl-v1.0.md  1. Service Provider Program — Context.docx  2. Brief — Verifier + AuthResolverImpl .docx  3. Prototype Spec_ Verifier + AuthResolverImpl — v1.0.docx  SPP3 Brief.docx
site/: .gitignore  package-lock.json  package.json
site/app/: ChatWidget.tsx  CopyPrompt.tsx  dossier.css  latex.min.css  layout.tsx  page.tsx
spec/: prototype_spec.v1.0-draft.02.publish.md
