[project]
name = "spp3-dossier-chat-backend"
version = "0.1.0"
description = "ChatKit + OpenAI Agents SDK backend for the Steg SPP3 dossier 'ask the dossier' chat"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.9",
    "openai-chatkit>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
]
